added html and styling for the home page

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,27 @@
-page-home {
+ion-header {
+  .btn-txt ion-icon {
+    margin-right: 7px;
+  }
 
+  .btn-txt {
+    background-color: #088478;
+  }
+
+  ion-title {
+
+    .genreName {
+      position: absolute;
+      margin-left: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      display: inline-block;
+      width: auto;
+      height: auto;
+    }
+  }
+
+
+  #logo {
+    width: 30px;
+  }
 }
