--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -1,3 +1,81 @@
-page-details {
+.game-image {
+  max-width: 100%;
+  margin: auto;
+}
 
+.game-image::after {
+  display: block;
+  position: relative;
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0, #000 100% );
+  margin-top: -150px;
+  height: 150px;
+  width: 100%;
+  opacity: .8;
+  content: '';
+}
+
+#popover {
+  width: 94%;
+  background: #0baab0;
+  position: relative;
+  margin: -110px auto 0 auto;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  padding: 7px;
+}
+
+h4 {
+  color: #8df6fa;
+  text-transform: uppercase;
+  font-size: .8em;
+  letter-spacing: 1px;
+  margin: 0;
+  padding: 0;
+}
+
+ion-card h4 {
+
+  & h4 {
+    font-weight: bold !important;
+    color: #8df6fa;
+    margin-bottom: 15px !important;
+  }
+
+  & p {
+    color: gray !important;
+  }
+}
+
+ion-col {
+
+  & p {
+    color: #ffffff;
+    margin: 10px 0 0 0;
+
+    &.larger-res {
+      font-size: 2em;
+      margin-top: 0;
+    }
+  }
+}
+
+ion-scroll {
+  height: 200px;
+}
+
+#screenslider ion-col {
+  padding: 0;
+}
+
+h5 {
+  text-transform: uppercase;
+  font-size: .8em;
+  letter-spacing: 1px;
+  margin-left: 10px;
+  margin-top: 25px;
+}
+
+.item-inner {
+  margin-left: 5px !important;
 }
